= Changelog
:toc: macro
ifdef::env-github[]
:toc-title:
:tip-caption: :bulb:
:note-caption: :bulb:
:important-caption: :heavy_exclamation_mark:
:caution-caption: :fire:
:warning-caption: :warning:
endif::[]

ifdef::env-github[]
[discrete]
== Contents
endif::[]
toc::[]

:link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment

== HEAD

== v2.3.0 - 2021-10-20
*   Add support for listening on a unix socket.
*   A more graceful shutdown process, under SIGINT or SIGTERM.

== v2.2.2 - 2021-08-21
*   Change test only helper library
*   structure logging (json) support for http requests (debug logging). +
    PR #52

== v2.2.1 - 2021-03-25
*   Update some dependencies.

== v2.2.0 - 2021-01-10
*   Move ip filtering to Dialer.Control, to further improve SSRF protections. +
    Note: Added a few additional debug log messages emitted when ip filtering

== v2.1.5 - 2020-08-11
*   Rebuild release with go-1.15

== v2.1.4 - 2020-02-18
*   Rebuild release with go-1.13.8
*   Experimental windows build

== v2.1.3 - 2019-12-18
*   Rebuild release with go-1.13.5

== v2.1.2 - 2019-11-17
*   Fix for enabling metrics collection in proxy

== v2.1.1 - 2019-11-12

*   Security fixes / content-type validation
*   Add `ProxyFromEnvironment` support. This uses HTTP proxies directed by the
    `HTTP_PROXY` and `NO_PROXY` (or `http_proxy` and `no_proxy`) environment
    variables. See {link-proxy-from-env} for more info.

== v2.1.0 - 2019-10-02

*   Support `audio/*` with `--allow-content-audio` flag (similar to how video
    is handled)
*   Additional metrics datapoints when using `--metrics`
*   Support only go 1.13, due to use of new error wrapping semantics
*   Improve client connection early abort handling
*   Improve max response side handling -- only read MaxSize KB from any
    upstream server. Note: This may result in partial responses to clients for
    chunked encoding requests that are longer than MaxSize, as there is no way