@@ -12,7 +12,7 @@ jobs:
       - name: Setup Go ${{ matrix.goVer }}
         uses: actions/setup-go@v1
         with:
-          go-version: '1.16.x'
+          go-version: '1.17.x'
         id: go
 
       - name: Src Checkout
